html changes on dashboard - added tables

--- a/pycrm/accounts/templates/accounts/dashboard.html
+++ b/pycrm/accounts/templates/accounts/dashboard.html
@@ -12,7 +12,11 @@
 		<div class="card card-body">
 			<a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm table-hover">
-				
+				<tr>
+					<th></th>
+					<th>Custoemr</th>
+					<th>Order</th>
+				</tr>
 			</table>
 		</div>
 	</div>
@@ -23,7 +27,13 @@
 		<div class="card card-body">
 			<a class="btn btn-primary btn-sm btn-block" href="">Create Order</a>
 			<table class="table table-sm table-hover">
-				
+				<tr>
+					<th>Product</th>
+					<th>Date Ordered</th>
+					<th>Status</th>
+					<th>Update</th>
+					<th>Remove</th>
+				</tr>
 			</table>
 		</div>		
 	</div>
