--- a/pycrm/accounts/templates/accounts/dashboard.html
+++ b/pycrm/accounts/templates/accounts/dashboard.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% include 'accounts/status.html' %}
+
 <br>
 
 <div class="row">
@@ -13,10 +15,17 @@
 			<a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm table-hover">
 				<tr>
-					<th></th>
-					<th>Custoemr</th>
-					<th>Order</th>
+					<th>Customer</th>
+					<th>Phone</th>
 				</tr>
+
+				{% for i in customers %}
+				<tr>
+					<td>{{i.name}}</td>
+					<td>{{i.phone}}</td>
+				</tr>
+				{% endfor %}
+
 			</table>
 		</div>
 	</div>
@@ -34,6 +43,16 @@
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
+
+				{% for i in orders %}
+				<tr>
+					<td>{{i.product}}</td>
+					<td>{{i.date_created}}</td>
+					<td>{{i.status}}</td>
+					<td><button class="btn btn-info">Update</button></td>
+					<td><button class="btn btn-danger">Remove</button></td>
+				</tr>
+				{% endfor %}
 			</table>
 		</div>		
 	</div>
