--- a/pycrm/accounts/templates/accounts/products.html
+++ b/pycrm/accounts/templates/accounts/products.html
@@ -4,6 +4,32 @@
 
 {% block content %}
 
-<h1>Products</h1>
+<br>
+
+<div class="row">
+	<div class="col-md">
+		<div class="card card-body">
+			<h5>Products</h5>
+		</div>
+		<div class="card card-body">
+			<table class="table table-hover">
+				<tr>
+					<th>Product</th>
+					<th>Category</th>
+					<th>Price</th>
+				</tr>
+
+				{% for i in products %}
+				<tr>
+					<td>{{i.name}}</td>
+					<td>{{i.category}}</td>
+					<td>{{i.price}}</td>
+				</tr>
+				{% endfor %}
+				
+			</table>
+		</div>
+	</div>	
+</div>
 
 {% endblock %}
