--- a/pycrm/accounts/templates/accounts/dashboard.html
+++ b/pycrm/accounts/templates/accounts/dashboard.html
@@ -15,12 +15,14 @@
 			<a class="btn btn-primary btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm table-hover">
 				<tr>
+					<th></th>
 					<th>Customer</th>
 					<th>Phone</th>
 				</tr>
 
 				{% for i in customers %}
 				<tr>
+					<td><a href="{% url 'customer' i.id %}">View</a></td>
 					<td>{{i.name}}</td>
 					<td>{{i.phone}}</td>
 				</tr>
@@ -34,7 +36,6 @@
 		<hr>
 
 		<div class="card card-body">
-			<a class="btn btn-primary btn-sm btn-block" href="">Create Order</a>
 			<table class="table table-sm table-hover">
 				<tr>
 					<th>Product</th>
@@ -49,8 +50,8 @@
 					<td>{{i.product}}</td>
 					<td>{{i.date_created}}</td>
 					<td>{{i.status}}</td>
-					<td><button class="btn btn-info">Update</button></td>
-					<td><button class="btn btn-danger">Remove</button></td>
+					<td><a class="btn btn-sm btn-info" href="{% url 'update_order' i.id %}">Update</a></td>
+					<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' i.id %}">Remove</a></td>
 				</tr>
 				{% endfor %}
 			</table>
