--- a/pycrm/accounts/templates/accounts/customer.html
+++ b/pycrm/accounts/templates/accounts/customer.html
@@ -9,7 +9,7 @@
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
-			<h5>Customer</h5>
+			<h5>Customer: {{customer.name}}</h5>
 			<hr>
 			<a class="btn btn-outline-info btn-sm btn-block" href="">Update Customer</a>
 			<a class="btn btn-outline-info btn-sm btn-block" href="{% url 'create_order' customer.id %}">Place Order</a>
@@ -37,7 +37,8 @@
 <div class="row">
 	<div class="col">
 		<div class="card card-body">
-			<form method="get">
+			<form action="" method="get">
+				{{my_filter.form}}
 				<button class="btn btn-primary" type="submit">Search</button>
 			</form>
 		</div>
@@ -52,7 +53,7 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
-					<th>Category</th>
+					<th>Note</th>
 					<th>Date Ordered</th>
 					<th>Status</th>
 					<th>Update</th>
@@ -62,7 +63,7 @@
 				{% for order in orders %}
 				<tr>
 					<td>{{order.product}}</td>
-					<td>{{order.product.category}}</td>
+					<td>{{order.note}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
 					<td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
